# QtUsersManagement

./: .gitignore  AuthUtils.cpp  AuthUtils.h  CMakeLists.txt  CMakeLists.txt.qtds  CMakeLists.txt.user.93e9df1  Database.cpp  Database.db  Database.h  Gestão do Conhecimento.txt  HashUtils.cpp  HashUtils.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  ProjectDB.cpp  ProjectManager.cpp  ProjectManager.ui  README.md  UserDB.cpp  UserDB.h  UserManagementDialog.cpp  UserManagementDialog.h  UserManager.cpp  UsersManagement  debug.h  main.cpp  manual.md  projects.json  resources.qrc  run_users_management.sh  sirerc_db.sirerc_collection.json  sync.py  users.db  users.json
Database/: Database.cpp  Database.db  Database.h
GuiaDevSirerc/Guia_desenv_2/: guia_inst_win_amb_sirerc_v2.aux  guia_inst_win_amb_sirerc_v2.out  guia_inst_win_amb_sirerc_v2.synctex.gz.sum.synctex  guia_inst_win_amb_sirerc_v2.tex  guia_inst_win_amb_sirerc_v2.toc
GuiaDevSirerc/Original/: guia_do_desenvolvedor_sirerc.tex
Guia_desenv_2/: guia_inst_win_amb_sirerc_v2.hst  guia_inst_win_amb_sirerc_v2.synctex.gz.sum.synctex  guia_inst_win_amb_sirerc_v2.ver
Hash/: HashUtils.cpp
Login/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui
Main/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
Management/: UserManagementDialog.cpp  UserManagementDialog.ui
Managers/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
Manual/: guia_inst_window.aux  guia_inst_window.hst  guia_inst_window.out  guia_inst_window.synctex.gz.sum.synctex  guia_inst_window.tex  guia_inst_window.toc  guia_inst_window.ver  guia_inst_windows_2.aux  guia_inst_windows_2.out  guia_inst_windows_2.tex  guia_inst_windows_2.toc
Manual/images/: refs.bib
Project/: ProjectDB.cpp  ProjectDB.h  ProjectManager.cpp  ProjectManager.h  ProjectManager.ui  project.cpp  project.h  project.ui
User/: UserDB.cpp  UserDB.h  UserManager.cpp  UserManager.h  UserManager.ui
translations/: translation_en.qm  translation_en.ts  translation_pt.qm  translation_pt.ts
